# SapiensSim

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: README.md  architecture.md  components.md  configuration.md  installation.md  tutorial.md
docs/api/: README.md
src/sapiens_sim/: __init__.py  config.py  main copy.py  main.py  optimized_main.py  smart_main.py
src/sapiens_sim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sapiens_sim/core/: adaptive_optimization.py  agent_manager.py  agents.py  batch_neat_optimizer.py  neat_brain.py  optimized_simulation.py  simulation.py  spatial_optimization.py  vectorized_simulation.py  world.py
tests/: test_agent.py  test_neuroevolution.py  test_simulation.py  test_world.py
